--- a/Home.html
+++ b/Home.html
@@ -55,8 +55,8 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <!-- <h1 class="logo"><a href="index.html">Batool Virtual School<span>.</span></a></h1> -->
-      <a href="index.html" class="logo"><img src="assets/img/Logo.png" alt=""></a>
+      <!-- <h1 class="logo"><a href="Home.html">Batool Virtual School<span>.</span></a></h1> -->
+      <a href="Home.html" class="logo"><img src="assets/img/Logo.png" alt=""></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -68,7 +68,7 @@
           <li><a class="nav-link scrollto" href="#contact">تواصل معنا</a></li>
           <li class="dropdown" style="float: left;"><a style="float: left;" href="#"><i class="bi bi-translate"></i></a>
             <ul>
-              <li><a href="index.html"><iconify-icon
+              <li><a href="En/Home.html"><iconify-icon
                     icon="emojione-v1:flag-for-united-states"></iconify-icon>English</a></li>
               <li><a href="#"><iconify-icon icon="emojione-v1:flag-for-syria"></iconify-icon>العربية</a></li>
             </ul>
